--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -6,6 +6,24 @@
   <title>Register</title>
 </head>
 <body>
-  {{title}}
+  <form action="/register" method="POST" id="form" class="form_register">
+    <h1 class="form__title">{{title}}</h1>
+    <div class="form__field">
+      <label for="username" class="form__field__label">User Name</label>
+      <input type="text" name="username" id="username" class="form__field__input" >
+    </div>
+    <div class="form__field">
+      <label for="email" class="form__field__label">Email</label>
+      <input type="email" name="email" id="email" class="form__field__input" >
+    </div>
+    <div class="form__field">
+      <label for="password" class="form__field__label">Password</label>
+      <input type="password" name="password" id="password" class="form__field__input" >
+    </div>
+    <div class="form__button">
+      <input type="submit" value="Sign up">
+      <div>Have an account? <a href="/login">Log in now</a> </div>
+    </div>
+  </form>
 </body>
 </html>
