--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -6,6 +6,20 @@
   <title>Login</title>
 </head>
 <body>
-  {{title}}
+  <form action="/login" method="POST" id="form" class="form_login">
+    <h1 class="form__title">{{title}}</h1>
+    <div class="form__field">
+      <label for="email" class="form__field__label">Email</label>
+      <input type="email" name="email" id="email" class="form__field__input" >
+    </div>
+    <div class="form__field">
+      <label for="password" class="form__field__label">Password</label>
+      <input type="password" name="password" id="password" class="form__field__input" >
+    </div>
+    <div class="form__button">
+      <input type="submit" value="Next">
+      <div>Don't have an account? <a href="/register">Sign Up</a> </div>
+    </div>
+  </form>
 </body>
 </html>
