--- a/views/layouts/default-layout.hbs
+++ b/views/layouts/default-layout.hbs
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" type="img/png" href="/img/favicon.png" />
+  <link rel="stylesheet" href="/css/{{css}}">
+  <title>{{title}}</title>
 </head>
 <body>
-  <h1>Default layout</h1>
   {{{body}}}
+  <span>Default layout</span>
 </body>
 </html>
