fix: TDD issues

--- a/views/auth/login_view.hbs
+++ b/views/auth/login_view.hbs
@@ -1,4 +1,4 @@
-<form action="/login" method="POST" id="form" class="form_login">
+<form action="/login" method="POST" id="form" class="form__login">
   <h1 class="form__title">{{formTitle}}</h1>
   <div class="form__field">
     <label for="email" class="form__field__label">Email</label>
