--- a/views/auth/register_view.hbs
+++ b/views/auth/register_view.hbs
@@ -1,4 +1,4 @@
-<form action="/register" method="POST" id="form" class="form_register">
+<form action="/register" method="POST" id="form" class="form__register">
   <h1 class="form__title">{{formTitle}}</h1>
   <div class="form__field">
     <label for="username" class="form__field__label">User Name</label>
